force-app/main/default/objects/X7S_Adventure_Subtask__c/X7S_Adventure_Subtask__c.object-meta.xml
<CustomObject>
    <description>Object to support Learning Adventure Subtask records as part of the Learning Adventure accelerator from 7Summits.</description>
    <label>7S Adventure Subtask</label>
    <nameField>
        <label>7S Adventure Sub-task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>7S Adventure Subtasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>