force-app/main/default/objects/X7S_Adventure_Subtask__c/fields/Parent_Task__c.field-meta.xml
<CustomField>
    <fullName>Parent_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Task</label>
    <referenceTo>X7S_Adventure_Task__c</referenceTo>
    <relationshipLabel>Adventure Subtasks</relationshipLabel>
    <relationshipName>Adventure_Subtasks</relationshipName>
    <type>Lookup</type>
</CustomField>