force-app/main/default/objects/X7S_Adventure_Subtask__c/fields/Text_Display__c.field-meta.xml
<CustomField>
    <fullName>Text_Display__c</fullName>
    <label>Text Display</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>